// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test Banners should render correctly 1`] = `
<div>
  <div
    class="container"
  >
    <button
      class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only prev"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="left"
          class="anticon anticon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only next"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="right"
          class="anticon anticon-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="banners"
    >
      <div
        class="banner"
      >
        <img
          src="desktop-image-3.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="desktop-image-1.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="desktop-image-2.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="desktop-image-3.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="desktop-image-1.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test Banners should render correctly in mobile 1`] = `
<div>
  <div
    class="container"
  >
    <button
      class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only prev"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="left"
          class="anticon anticon-left"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="left"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
            />
          </svg>
        </span>
      </span>
    </button>
    <button
      class="ant-btn css-dev-only-do-not-override-hash ant-btn-circle ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only next"
      type="button"
    >
      <span
        class="ant-btn-icon"
      >
        <span
          aria-label="right"
          class="anticon anticon-right"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="right"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="banners"
    >
      <div
        class="banner"
      >
        <img
          src="mobile-image-3.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="mobile-image-1.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="mobile-image-2.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="mobile-image-3.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="mobile-image-1.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test Banners should render correctly with only one banner 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="banners"
    >
      <div
        class="banner"
      >
        <img
          src="mobile-image-1.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="mobile-image-1.png"
        />
      </div>
      <div
        class="banner"
      >
        <img
          src="mobile-image-1.png"
        />
      </div>
    </div>
  </div>
</div>
`;
